feat: complete Java 21 port of streaming parser and demo